fixed overflow in itemcreate (#963)

--- a/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
+++ b/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
@@ -21,6 +21,7 @@
       & > div {
         padding: 0;
         height: initial;
+        overflow: initial;
       }
     }
     [data-cy="DuoModeContainer"] {
